--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,106 @@
+asttokens==2.0.5
+attrs==21.4.0
+backcall==0.2.0
+blis==0.7.7
+boto3==1.22.6
+botocore==1.25.6
+cached-property==1.5.2
+catalogue==2.0.7
 certifi==2021.10.8
+chardet==4.0.0
 charset-normalizer==2.0.12
+click==8.0.4
+colorama==0.4.4
+conllu==4.4.2
+cycler==0.11.0
+cymem==2.0.6
+datapackage==1.15.2
+debugpy==1.6.0
+decorator==5.1.1
+entrypoints==0.4
+et-xmlfile==1.1.0
+executing==0.8.3
+fonttools==4.32.0
+GPUtil==1.4.0
+greenlet==1.1.2
 idna==3.3
+ijson==3.1.4
+imageio==2.19.1
+ipykernel==6.13.0
+ipython==8.2.0
+isodate==0.6.1
+jedi==0.18.1
+Jinja2==3.1.2
+jmespath==1.0.0
 joblib==1.1.0
-numpy==1.22.3
+jsonlines==3.0.0
+jsonpointer==2.3
+jsonschema==4.4.0
+jupyter-client==7.2.2
+jupyter-core==4.9.2
+kiwisolver==1.4.2
+langcodes==3.3.0
+linear-tsv==1.1.0
+MarkupSafe==2.1.1
+matplotlib==3.5.1
+matplotlib-inline==0.1.3
+murmurhash==1.0.7
+nest-asyncio==1.5.5
+nltk==3.7
+numpy==1.21.6
+openpyxl==3.0.9
+packaging==21.3
 pandas==1.4.0
+parso==0.8.3
+pathy==0.6.1
+pickleshare==0.7.5
 Pillow==9.1.0
+preshed==3.0.6
+prompt-toolkit==3.0.29
+psutil==5.9.0
+psycopg2==2.9.3
+pure-eval==0.2.2
+pybind11==2.6.1
+pydantic==1.8.2
+Pygments==2.11.2
+pyparsing==3.0.8
+pyrsistent==0.18.1
+pysbd==0.3.4
 python-dateutil==2.8.2
 pytz==2021.3
+pywin32==303
+pyzmq==22.3.0
+regex==2022.4.24
 requests==2.27.1
+rfc3986==2.0.0
+s3transfer==0.5.2
 scikit-learn==1.0.2
 scipy==1.8.0
 six==1.16.0
+sklearn==0.0
+smart-open==5.2.1
+spacy==3.3.0
+spacy-legacy==3.0.9
+spacy-loggers==1.0.2
+SQLAlchemy==1.4.36
+srsly==2.4.3
+stack-data==0.2.0
+tableschema==1.20.2
+tabulator==1.53.5
+thinc==8.0.15
 threadpoolctl==3.1.0
 torch==1.11.0+cu113
 torchaudio==0.11.0+cu113
+torchsummary==1.5.1
 torchvision==0.12.0+cu113
+tornado==6.1
+tqdm==4.64.0
+traitlets==5.1.1
+typer==0.4.1
 typing_extensions==4.1.1
+unicodecsv==0.14.1
 urllib3==1.26.9
+utils==1.0.1
+wasabi==0.9.1
+wcwidth==0.2.5
+xlrd==2.0.1
